--- a/Style/Mainstyle.css
+++ b/Style/Mainstyle.css
@@ -78,31 +78,41 @@ section {
     width: 1024px;
     margin: 0 auto;
     margin-top: 2em;
-    background-color: blueviolet;
     min-height: 200px;
     padding-top: 4em;
 }
 
-section > .container {
-    background-color: bisque;
-    
+/*---------------- SECTION FRONTPAGE INFOMRATION STYLE STARTS ----------------*/
+
+section > .informationContainer {
+    width: 100%;
+    height: 100px;
+    text-align: center;
 }
 
-section > .container > .subjectBox {
+/*---------------- SECTION FRANTPAGE INFORMATION ENDS -------------------*/
+
+
+section > .subject-container {
+    background-color: aquamarine;
+    min-height: 350px;
+}
+
+section > .subject-container > .subjectBox {
     background-color: #fff;
     width: 30%;
     float: left;
     margin: 1.0672em;
 }
 
-section > .container > .subjectBox > h2 {
+section > .subject-container > .subjectBox > h2 {
     background-color:#000;
     font-size: 30px;
     text-align: center;
     color: #ececec;
 }
 
-section > .container > .subjectBox > .borderSurround {
+section > .subject-container > .subjectBox > .borderSurround {
     border: 1.5px solid #000;
     padding: 0.5em 0;
     
